--- a/sass/main.sass
+++ b/sass/main.sass
@@ -29,6 +29,7 @@ html, body
 	height: 100%
 
 body
+	margin: 0
 	font-size: 16px
 	min-width: 320px
 	position: relative
@@ -42,4 +43,7 @@ body
 	max-width: 100%
 	height: auto
 
+@import "header"
+@import "content"
+@import "films"
 @import "media" // Всегда в конце
