--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ html, body {
 }
 
 body {
+  margin: 0;
   font-size: 16px;
   min-width: 320px;
   position: relative;
@@ -62,6 +63,239 @@ body {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #0077C1;
+  min-height: 10%;
+  border-top: 30px solid #42A5F5;
+  margin-bottom: 7%;
+}
+
+.header__logo {
+  margin: 0 auto;
+  margin-bottom: 5px;
+}
+
+.header__logo h1 {
+  margin: 0 0;
+  color: #1c1c1c;
+  font-size: 50px;
+  font-weight: 100;
+}
+
+.header__menu a {
+  font-size: 50px;
+  text-decoration: none;
+  color: #1c1c1c;
+}
+
+.header__hiddenMenu {
+  display: block;
+  position: fixed;
+  padding: 10px;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 50%;
+  background-color: #eee;
+  height: 100%;
+  top: 0;
+  left: -50%;
+  -webkit-transition: left .2s;
+  -o-transition: left .2s;
+  transition: left .2s;
+  z-index: 2;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.header__menuToggle {
+  display: none;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn {
+  left: 35%;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerFirstLine {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 10px;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerSecondLine {
+  opacity: 0;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerThirdLine {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: -10px;
+}
+
+.header__menuToggle:checked ~ .header__hiddenMenu {
+  left: 0;
+}
+
+.header__menuBtn {
+  color: #fff;
+  background-color: #fff;
+  opacity: 0.7;
+  padding: 20px;
+  margin-top: 29px;
+  -webkit-border-radius: 50px;
+          border-radius: 50px;
+  position: fixed;
+  top: 5px;
+  left: 5px;
+  cursor: pointer;
+  -webkit-transition: left .23s;
+  -o-transition: left .23s;
+  transition: left .23s;
+  z-index: 3;
+  width: 75px;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.header__menuBtn span {
+  display: block;
+  height: 5px;
+  background-color: #1c1c1c;
+  margin: 15px 0 0;
+  -webkit-transition: all .1s linear .23s;
+  -o-transition: all .1s linear .23s;
+  transition: all .1s linear .23s;
+  position: relative;
+}
+
+.header__menuBtn span.header__burgerFirstLine {
+  margin-top: 0;
+}
+
+.content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content__logo {
+  width: 100%;
+  background-color: #29434E;
+  text-align: center;
+  margin-bottom: 10%;
+}
+
+.content__logo h2 {
+  color: #fff;
+  font-weight: 200;
+  font-size: 50px;
+  line-height: 1em;
+}
+
+.films {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.films__item {
+  display: none;
+  margin: 20px auto;
+  font-size: 50px;
+  width: 80%;
+  position: relative;
+}
+
+.films__itemTemplate {
+  display: none;
+}
+
+.films__date {
+  background-color: #29434E;
+  display: inline-block;
+  color: #fff;
+  padding: 2px 5px;
+}
+
+.films__itemImageBlock {
+  position: relative;
+}
+
+.films__itemImageBlock img {
+  width: 100%;
+}
+
+.films__durationBlock {
+  position: absolute;
+  color: #fff;
+  left: 5px;
+  line-height: 1em;
+  background-color: #000;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 5px;
+  opacity: .7;
+}
+
+.films__ageLimitBlock {
+  position: absolute;
+  color: #fff;
+  right: 5px;
+  line-height: 1em;
+  background-color: #000;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 5px;
+  opacity: .7;
+}
+
+.films__sbscrBtnBlock {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.films__sbscrBtn {
+  text-align: center;
+}
+
+.films__sbscrBtn span {
+  background-color: #546E7A;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 10px 20px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
 }
 
 /*==========  Desktop First  ==========*/
