--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 @font-face {
   font-family: "roboto-example";
   font-weight: normal;
@@ -14,54 +18,222 @@
   src: url("../fonts/RobotoBold/RobotoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype");
 }
 
-*::-webkit-input-placeholder {
-  color: #666;
-  opacity: 1;
+.header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #42A5F5;
+  border-top: 20px solid #0077C1;
+  margin-bottom: 20px;
 }
 
-*:-moz-placeholder {
-  color: #666;
-  opacity: 1;
+.header__logo {
+  margin: 0 auto;
 }
 
-*::-moz-placeholder {
-  color: #666;
-  opacity: 1;
+.header__logo h1 {
+  margin: 0 0;
+  color: #1c1c1c;
+  font-size: 18px;
+  padding: 15px 0;
+  font-weight: 100;
 }
 
-*:-ms-input-placeholder {
-  color: #666;
-  opacity: 1;
+.header__menu a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #1c1c1c;
 }
 
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-  color: #666;
-}
-
-body input:required:valid,
-body textarea:required:valid {
-  color: #666;
-}
-
-html, body {
-  height: 100%;
-}
-
-body {
-  font-size: 16px;
-  min-width: 320px;
-  position: relative;
-  line-height: 1.75;
-  font-family: "roboto-example", sans-serif;
-  overflow-x: hidden;
-  opacity: 1;
-}
-
-.img-responsive {
+.header__hiddenMenu {
   display: block;
-  max-width: 100%;
-  height: auto;
+  position: fixed;
+  padding: 10px;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 50%;
+  background-color: #eee;
+  height: 100%;
+  top: 0;
+  left: -50%;
+  -webkit-transition: left .2s;
+  -o-transition: left .2s;
+  transition: left .2s;
+  z-index: 2;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.header__menuToggle {
+  display: none;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn {
+  left: 35%;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerFirstLine {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 10px;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerSecondLine {
+  opacity: 0;
+}
+
+.header__menuToggle:checked ~ .header__menuBtn span.header__burgerThirdLine {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: -10px;
+}
+
+.header__menuToggle:checked ~ .header__hiddenMenu {
+  left: 0;
+}
+
+.header__menuBtn {
+  color: #fff;
+  background-color: #fff;
+  opacity: 0.7;
+  padding: 10px;
+  margin-top: 20px;
+  -webkit-border-radius: 50px;
+          border-radius: 50px;
+  position: fixed;
+  top: 5px;
+  left: 12px;
+  cursor: pointer;
+  -webkit-transition: left .23s;
+  -o-transition: left .23s;
+  transition: left .23s;
+  z-index: 3;
+  width: 25px;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.header__menuBtn span {
+  display: block;
+  height: 3.5px;
+  background-color: #1c1c1c;
+  margin: 5px 0 0;
+  -webkit-transition: all .1s linear .23s;
+  -o-transition: all .1s linear .23s;
+  transition: all .1s linear .23s;
+  position: relative;
+}
+
+.header__menuBtn span.header__burgerFirstLine {
+  margin-top: 0;
+}
+
+.content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content__logo {
+  background-color: #29434E;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.content__logo h2 {
+  color: #fff;
+  font-weight: 200;
+  font-size: 18px;
+  padding: 0 20px;
+}
+
+.films {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+}
+
+.films__item {
+  margin: 20px auto;
+  font-size: 18px;
+  position: relative;
+}
+
+.films__date {
+  background-color: #29434E;
+  display: inline-block;
+  color: #fff;
+  padding: 2px 5px;
+}
+
+.films__image {
+  position: relative;
+}
+
+.films__image img {
+  width: 100%;
+}
+
+.films__duration {
+  position: absolute;
+  color: #fff;
+  left: 5px;
+  background-color: #000;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 5px;
+  opacity: .7;
+}
+
+.films__ageLimit {
+  position: absolute;
+  color: #fff;
+  right: 5px;
+  background-color: #000;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 5px;
+  opacity: .7;
+}
+
+.films__sbscribe {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.films__button {
+  text-align: center;
+}
+
+.films__button span {
+  background-color: #546E7A;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 10px 20px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
 }
 
 /*==========  Desktop First  ==========*/
